scss/spreadsheet/_layout.scss
/* ... */
@include exports( "spreadsheet/tools/layout" ) {

    .k-spreadsheet-popup {
        padding: 0;

        .k-separator {
            display: block;
        }

        .k-button {
            @include border-radius( 0 );
            border-width: 0;
            color: inherit;
            background: none;
        }
        .k-button-icontext {
            display: flex;
            justify-content: flex-start;
        }

        .k-reset-color,
        .k-custom-color {
            @include border-radius( 0 );
            width: 100%;
            border-width: 0;
            box-sizing: border-box;
            display: flex;
        }
        .k-reset-color { border-bottom-width: 1px; }
        .k-custom-color { border-top-width: 1px; }
        .k-spreadsheet-color-palette {
            padding: $popup-padding-y;
        }
        .k-spreadsheet-border-type-palette {
            width: 12.5rem;
            height: 5rem;
            display: flex;
            flex-flow: row wrap;
            align-content: space-around;
            justify-content: space-around;
        }

    }

    .k-spreadsheet-sample {
        float: right;
        opacity: .7;
    }
}




@include exports( "spreadsheet/clipboard/layout" ) {

    .k-spreadsheet-clipboard,
    .k-spreadsheet-clipboard-paste {
        margin: 0;
        padding: 0;
        width: 1px;
        height: 1px;
        border: 0;
        opacity: 0;
        position: absolute;
        top: 0;
        left: 0;
        overflow: hidden;
    }

}




@include exports( "spreadsheet/window/layout" ) {

    .k-spreadsheet-window {}
    .k-spreadsheet-window .k-edit-form-container {
        width: auto;
        min-width: 0;
    }


    // Format preview window
    .k-spreadsheet-format-cells {

        .k-spreadsheet-preview {
            margin-top: ($spacer / 2);
            text-align: center;
        }

        .k-list-scroller {
            margin-top: ($spacer / 2);
            height: 210px;
            border-width: 1px;
            border-style: solid;
            border-color: inherit;
        }
    }

}

